@@ -12,10 +12,10 @@ libraries.
 See the header file SDL_mixer.h and the examples playwave.c and playmus.c
 for documentation on this mixer library.
 
-The mixer can currently load Microsoft WAVE files as audio samples
-and can load MIDI files via Timidity and the following music formats
-via MikMod:  .MOD .S3M .IT .XM. It can also load MP3 music using the
-SMPEG library.
+The mixer can currently load Microsoft WAVE files and Creative Labs VOC
+files as audio samples, and can load MIDI files via Timidity and the
+following music formats via MikMod:  .MOD .S3M .IT .XM. It can also load
+MP3 music using the SMPEG library.
 
 The process of mixing MIDI files to wave output is very CPU intensive,
 so if playing regular WAVE files sound great, but playing MIDI files
