@@ -36,12 +36,12 @@ AC_SUBST(LT_CURRENT)
 AC_SUBST(LT_REVISION)
 AC_SUBST(LT_AGE)
 
-dnl Setup for automake
-AM_INIT_AUTOMAKE(SDL_mixer, $VERSION)
-
 dnl Detect the canonical host and target build environment
 AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
+
+dnl Setup for automake
+AM_INIT_AUTOMAKE(SDL_mixer, $VERSION)
 
 dnl Check for tools
 
@@ -80,6 +80,15 @@ dnl Matt Campbell (matt@campbellhome.dhs.org)
 CFLAGS="$CFLAGS -DUSE_RWOPS"
 
 dnl Check command-line options
+
+dnl rcg06052001 VOC file support by Ryan C. Gordon (icculus@linuxgames.com).
+AC_ARG_ENABLE(samples-voc,
+[  --enable-samples-voc    enable support for VOC samples [default=yes]],
+              , enable_samples_voc=yes)
+if test x$enable_samples_voc = xyes; then
+    CFLAGS="$CFLAGS -DVOC_SAMPLES"
+fi
+
 AC_ARG_ENABLE(music-cmd,
 [  --enable-music-cmd      support an external music player [default=yes]],
               , enable_music_cmd=yes)
